# hci-server

./: '  README.md  hello.py  main.py  pyproject.toml
data/: sessions.json
static/css/: 404.css  base.css  index.css  style.css
static/js/: base.js  index.js  script.js
templates/: 404.html  base.html  index.html
util/: __init__.py  _app.py  _config.py  _data.py  _types.py
