[project]
name = "hci-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "jinja2>=3.1.6",
    "pydantic>=2.10.6",
    "types-flask-cors>=5.0.0.20240902",
    "uvicorn>=0.34.0",
]
